# FLStrategiaModelloMigliore

et/: pyproject.toml
et/et/: __init__.py  client_app.py  datasetUnito.csv  server_app.py  task.py
